--- a/homeworks/week18/hw1/public/style/style.sass
+++ b/homeworks/week18/hw1/public/style/style.sass
@@ -11,6 +11,10 @@
 
 $color-primary: #a3dea2
 $color-btn: #ff7286
+
+// tt for debug
+.tt
+  outline: 1px solid red
   
 * 
   box-sizing: border-box
@@ -246,24 +250,6 @@ h4
 
 
 /* lottery */
-
-/* 換背景圖 */
-// $bg-switch: (FIRST: 'flight.jpg', SECOND: 'tv.jpg', THIRD: 'youtuber.jpg', event: 'eventsbg.png')
-
-// @each $type, $value in $bg-switch
-//   .#{$type}-bg
-//     height: 520px
-//     background: url(../images/lottery-#{$value}) left/cover no-repeat 
-//     position: relative
-
-
-// .NONE-bg
-//   width: 100%
-//   height: 520px
-//   background-color: rgb(27, 27, 27)
-//   position: relative
-//   color: white
-
 .event-bg
   height: 520px
   background: url(../images/lottery-eventsbg.png) left/cover no-repeat 
@@ -380,8 +366,6 @@ button:hover
     background-color: $color-btn
     // +absCenter(calc(100% - 250px))
 
-.tt
-  outline: 2px solid red
 
 // 點餐
 .menu-images 
@@ -518,13 +502,15 @@ button:hover
 
 .admin-btn
   font-size: 1.5rem
-  button
+  input
     font-size: 1.2rem
     border-radius: 5px
     background: white
     padding: .2rem .8rem
     margin-left: .6rem
     border: 1px solid 
+    &:hover
+      cursor: pointer
   &-first
     color: #198754
     border: #198754
@@ -635,8 +621,235 @@ button:hover
   justify-content: center
 
 
+// login register
+.login-board
+  display: block
+  border: 2px solid rgb(51, 153, 90)
+  width: 30%
+  height: 17rem
+  margin: 10rem auto
+  border-radius: 5px
+  box-shadow: 2px 2px 8px rgba(131, 131, 131, 0.7)
+  text-align: center
+  position: relative
+
+  .lg-title
+    font-size: 2.3rem
+    margin:1rem 0 1.5rem 0
+    
+  h2
+    position: absolute
+    top:3.7rem
+    width:100%
+
+  .username , .password
+    font-size: 1.5rem
+    margin:1rem 0
+    input
+      height: 1.8rem
+      border-radius: 5px
+      border:1.5px rgb(51, 153, 90) solid 
+      font-size: 1.2rem
+      width: 40%
+
+  .submit-btn
+    font-size: 1.5rem
+    background-color: rgb(255, 255, 255)
+    padding: .2rem 1rem
+    border-radius: 5px
+    border: 1.5px rgb(51, 153, 90)
+    &:hover
+      background-color: rgb(51, 153, 90)
+      color: rgb(255, 255, 255)
+      cursor: pointer
+  &-bottom
+    margin: .5rem
+  a
+    font-size: 1rem
+    margin: 0 .3rem
+    color: black
+    text-decoration: underline
+    &:hover
+      color: rgb(51, 153, 90)
 
 
+// lottery add & edit
+.lottery-add-board
+  display: block
+  border: 2px solid rgb(51, 153, 90)
+  width: 40%
+  height: fit-content
+  margin: 2rem auto
+  border-radius: 5px
+  box-shadow: 2px 2px 8px rgba(131, 131, 131, 0.7)
+  position: relative
+  display: flex
+  flex-direction: column
+
+  .lg-title
+    font-size: 2.3rem
+    margin: 1rem 0 0rem 0
+    font-weight: 600
+    align-self: center
+  form
+    width: 90%
+    margin: 0 auto 1rem
+  .prize-name
+    font-size: 1.5rem
+    margin:1rem 0
+    span
+      max-width: 30%
+    input
+      height: 1.8rem
+      border-radius: 5px
+      border:1px rgb(51, 153, 90) solid 
+      font-size: 1.2rem
+      width: 70%
+    
+  .prize-desc
+    font-size: 1.5rem
+    margin:1rem .5rem 1rem 0
+    textarea
+      margin-top: .5rem
+      border-radius: 5px
+      border:1px rgb(51, 153, 90) solid 
+      font-size: 1.2rem
+      width: 100%
+  .prize-percent
+    input
+      width: 3rem
+    p
+      font-size: 1rem
+  .admin-btn
+    +flex(flex-end, inherit)
+    margin-top: -2rem
+
+  .manage-btn
+    position: absolute
+    right: 2%
+    top: 9%
+    input
+      font-size: 1rem
+
+// menu add & edit
+.menu-add-board
+  display: block
+  border: 2px solid rgb(51, 153, 90)
+  width: 40%
+  height: fit-content
+  margin: 8rem auto
+  border-radius: 5px
+  box-shadow: 2px 2px 8px rgba(131, 131, 131, 0.7)
+  position: relative
+  display: flex
+  flex-direction: column
+  form
+    width: 95%
+    margin: 0 auto
+  .lg-title
+    font-size: 2.3rem
+    margin: 1rem 0 0rem 0
+    font-weight: 600
+    align-self: center
+  .dish-name
+    font-size: 1.5rem
+    margin:1rem 0
+    span
+      max-width: 30%
+    input
+      height: 1.8rem
+      border-radius: 5px
+      border:1px rgb(51, 153, 90) solid 
+      font-size: 1.2rem
+      width: 70%
+  .dish-info
+    +flex(space-between, inherit)
+    font-size: 1.5rem
+    
+    .dish-prices
+      width: 40%
+      span
+        width: 45%
+      input
+        height: 1.8rem
+        border-radius: 5px
+        border:1px rgb(51, 153, 90) solid 
+        font-size: 1.2rem
+        width: 40%
+    .dish-img
+      width: 60%
+      span
+        width: 45%
+      input
+        height: 1.8rem
+        border-radius: 5px
+        border:1px rgb(51, 153, 90) solid 
+        font-size: 1.2rem
+        width: 70%
+
+  .admin-btn
+    +flex(flex-end, inherit)
+    margin: 1rem .1rem .5rem 0
+
+  .manage-btn
+    position: absolute
+    right: 2%
+    top: -2%
+    input
+      font-size: 1rem
+
+    
+// FAQ add & edit
+.faq-add-board
+  display: block
+  border: 2px solid rgb(51, 153, 90)
+  width: 40%
+  height: fit-content
+  margin: 2rem auto
+  border-radius: 5px
+  box-shadow: 2px 2px 8px rgba(131, 131, 131, 0.7)
+  position: relative
+  display: flex
+  flex-direction: column
+  form
+    width: 95%
+    margin: 0 auto
+  .lg-title
+    font-size: 2.3rem
+    margin: 1rem 0 0rem 0
+    font-weight: 600
+    align-self: center
+  .faq-question, .faq-answer
+    font-size: 1.5rem
+    margin: .5rem .5rem 
+    textarea
+      margin-top: .5rem
+      border-radius: 5px
+      border:1px rgb(51, 153, 90) solid 
+      font-size: 1.2rem
+      width: 100%
+  .faq-order
+    font-size: 1.5rem
+    margin:1rem .5rem 
+    input
+      width: 3rem
+      height: 1.8rem
+      border-radius: 5px
+      border:1px rgb(51, 153, 90) solid 
+      font-size: 1.2rem
+  
+  .admin-btn
+      +flex(flex-end, inherit)
+      margin: -2rem .5rem .5rem 0
+
+  .manage-btn
+    position: absolute
+    right: 0%
+    top: 10%
+    input
+      font-size: 1rem
+
+    
 
 footer
   max-width: 100vw
@@ -766,6 +979,63 @@ footer
     &-desc
       margin-bottom: 1rem
 
+  .login-board
+    width: 90%
+    margin: 2rem auto
+    .username , .password
+      font-size: 1.2rem
+      input
+        height: 1.3rem
+        border-radius: 5px
+        border:1.5px rgb(51, 153, 90) solid 
+        font-size: 1.2rem
+        width: 60%
+
+  .lottery-add-board
+    width: 90%
+    .prize-name
+      input
+        width: 100%
+    .prize-percent
+      input
+        width: 3rem
+    .admin-btn
+      margin-top: -.5rem
+    .manage-btn
+      right: 2%
+      top: 4%
+      input
+        padding: .2rem .4rem
+        font-size: .2rem
+
+  .faq-add-board
+    width: 90%
+    .manage-btn
+      input
+        padding: .2rem .4rem
+        font-size: .2rem
+
+  .menu-add-board
+    width: 90%
+    .dish-info
+      flex-direction: column
+      .dish-prices
+        width: 100%
+        span
+          width: fit-content
+        input
+          width: 60%
+      .dish-img
+        width: 100%
+        span
+          width: fit-content
+        input
+          width: 60%
+
+    .manage-btn
+      input
+        padding: .2rem .4rem
+        font-size: .2rem
 
   .footer
     &-top 
