--- a/homeworks/week18/hw1/views/admin/menu-add.ejs
+++ b/homeworks/week18/hw1/views/admin/menu-add.ejs
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../public/style/style.css">
+  <%- include ('../templates/head') %>
   <title>JB-Manage</title>
 </head>
 
 <body>
 
-  
   <div class="menu-add-board">
 
  
