--- a/homeworks/week18/hw1/public/style/style.sass
+++ b/homeworks/week18/hw1/public/style/style.sass
@@ -15,6 +15,12 @@ $color-btn: #ff7286
 // tt for debug
 .tt
   outline: 1px solid red
+// h5 for express errorflash
+h5
+  position: absolute
+  color: red
+  font-size: 1rem
+  
   
 * 
   box-sizing: border-box
@@ -671,7 +677,9 @@ button:hover
     text-decoration: underline
     &:hover
       color: rgb(51, 153, 90)
-
+  h5
+    left: 0
+    top: -10%
 
 // lottery add & edit
 .lottery-add-board
