--- a/homeworks/week18/hw1/views/templates/header.ejs
+++ b/homeworks/week18/hw1/views/templates/header.ejs
@@ -1,6 +1,7 @@
 <header>
   <div class="container">
     <div class="logo"><a href="/">Just A Bite!</a></div>
+    <a href="/login">登入</a>
     <nav class="header-nav">
       <a class="nav-lottery" href="/lottery">抽個大獎</a>
       <a class="nav-menu" href="/menu">我要點餐</a>
